--- a/markups/settings.html
+++ b/markups/settings.html
@@ -41,7 +41,7 @@
         </div>
         <div class="bottom">
           <a href="#"><button class="button_left" type="submit" name="button">Save Changes</button></a>
-          <a href="#"><button class="button_right" type="cancel" name="button">Cancel</button></a>
+          <a href="/homepage"><button class="button_right" type="cancel" name="button">Cancel</button></a>
         </div>
       </div>
     </div>
