Implemented Login and Register using postgreSQL

--- a/markups/login.html
+++ b/markups/login.html
@@ -15,7 +15,7 @@
 <body>
   <div class="container">
     <form class="form" id="login" method="POST" action="/login">
-      <img class="brand-logo" src="images/The Monk Store.png" alt="" />
+      <img class="brand-logo" src="icons/3.png" alt="" />
       <h1 class="form__title">Login</h1>
       <div class="form__message form__message--error"></div>
       <div class="form__input-group">
