ADDED: 1, New Homepage, 2. about us page

--- a/markups/footer.html
+++ b/markups/footer.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Footer1</title>
-  <link rel="stylesheet" href="footer.css">
+  <link rel="stylesheet" href="css/footer.css">
 </head>
 <body>
 <p class="copyright">&copy Copyrights. All rights reservered, 2021</p>  
