--- a/markups/login.html
+++ b/markups/login.html
@@ -8,9 +8,9 @@
     href="https://fonts.googleapis.com/css2?family=Poppins:wght@300&display=swap"
     rel="stylesheet"
   />
-  <link rel="stylesheet" href="authentication.css" />
-  <link rel="stylesheet" href="error.css" />
-  <link rel="stylesheet" href="spinner.css" />
+  <link rel="stylesheet" href="css/authentication.css" />
+  <link rel="stylesheet" href="css/error.css" />
+  <link rel="stylesheet" href="css/spinner.css" />
 </head>
 <body>
   <div class="container">
@@ -52,5 +52,5 @@
   <div class="spinner">
     <div class="circle"></div>
   </div>
-  <script src="spinner.js"></script>
+  <script src="js/spinner.js"></script>
 </body>
