--- a/markups/order-history.html
+++ b/markups/order-history.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>The Monk Store</title>
-<link rel="stylesheet" href="order history.css">
+<link rel="stylesheet" href="css/order-history.css">
 
 </head>
 <body>
