--- a/markups/settings.html
+++ b/markups/settings.html
@@ -2,7 +2,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Settings</title>
-  <link rel="stylesheet" href="settings.css">
+  <link rel="stylesheet" href="css/settings.css">
 </head>
 <body>
     <div class="wrapper">
