--- a/markups/forgot-password-email.html
+++ b/markups/forgot-password-email.html
@@ -8,14 +8,14 @@
     href="https://fonts.googleapis.com/css2?family=Poppins:wght@300&display=swap"
     rel="stylesheet"
   />
-  <link rel="stylesheet" href="authentication.css" />
-  <link rel="stylesheet" href="error.css" />
-  <link rel="stylesheet" href="spinner.css" />
+  <link rel="stylesheet" href="css/authentication" />
+  <link rel="stylesheet" href="css/error" />
+  <link rel="stylesheet" href="css/spinner" />
 </head>
 <body>
   <div class="container">
     <form class="form" id="login" method="POST" action="/forgot-password">
-      <img class="brand-logo" src="images/The Monk Store.png" alt="" />
+      <img class="brand-logo" src="icons/3.png" alt="" />
       <h1 class="form__title">Password Reset</h1>
       <div class="form__message form__message--error"></div>
       <div class="form__input-group">
@@ -34,5 +34,5 @@
   <div class="spinner">
     <div class="circle"></div>
   </div>
-  <script src="spinner.js"></script>
+  <script src="js/spinner.js"></script>
 </body>
