Improved file structure and Added comments

--- a/markups/seller-login.html
+++ b/markups/seller-login.html
@@ -10,21 +10,21 @@
   />
   <link rel="stylesheet" href="css/authentication.css" />
   <link rel="stylesheet" href="css/error.css" />
-  <link rel="stylesheet" href="css/spinner.css" />
+  <link rel="stylesheet" href="../static/css/authentication.css" />
 </head>
 <body>
   <div class="container">
-    <form class="form" id="login" method="POST" action="/login">
+    <form class="form" id="login" method="POST" action="/seller-login">
       <img class="brand-logo" src="icons/3.png" alt="" />
-      <h1 class="form__title">Login</h1>
+      <h1 class="form__title">Seller Login</h1>
       <div class="form__message form__message--error"></div>
       <div class="form__input-group">
         <input
           type="text"
           class="form__input"
           autofocus
-          placeholder="email"
-          name="email"
+          placeholder="Username"
+          name="name"
         />
         <div class="form__input-error-message"></div>
       </div>
@@ -38,14 +38,35 @@
         />
         <div class="form__input-error-message"></div>
       </div>
+      <div class="form__input-group">
+        <input
+          type="hidden"
+          class="form__input"
+          autofocus
+          placeholder="Password"
+          name="userToken"
+          value="${user.email}"
+        />
+        <div class="form__input-error-message"></div>
+      </div>
+      <div class="form__input-group">
+        <input
+          type="checkbox"
+          class="form__input checkbox"
+          autofocus
+          placeholder="Password"
+          name="userToken"
+          checked
+          required
+          oninvalid="this.setCustomValidity('Accept the terms and conditions to continue')"
+          oninput="this.setCustomValidity('')"
+          />
+          <div class="checkbox"> I agree to accept the terms and conditions</div>
+        <div class="form__input-error-message"></div>
+      </div>
       <button class="form__button" type="submit">Continue</button>
       <p class="form__text">
         <a href="/forgot-password" class="form__link">Forgot your password?</a>
-      </p>
-      <p class="form__text">
-        <a class="form__link" href="/register" id="linkCreateAccount"
-          >Don't have an account? Create account</a
-        >
       </p>
     </form>
   </div>
